--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(to bottom right, #ffffff, #ffffff);
+  background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDEyfHxiZWFjaHxlbnwwfHx8fDE2ODYzMzMxMjM&ixlib=rb-1.2.1&q=80&w=1080');
   font-size: 1em;
   color: white;
   margin: 0;
   padding: 0;
+  background-size: cover; /* Cover the entire viewport */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat;
 }
 
 #dropdown {
   margin: 20px;
   text-align: center;
 }
+
 
 .container {
   padding: 20px;
@@ -113,7 +117,7 @@ body {
 .temp-avg,
 .temp-min,
 .temp-max {
-  font-size: 1.2em;
+  font-size: .8em;
   margin: 0.5em 0;
   text-align: center;
 }
